fixes on mobile view

--- a/style.scss
+++ b/style.scss
@@ -173,7 +173,7 @@ header {
     .hero-content {
         h1 {
             max-width: 70vw;
-            min-width: 523px;
+            font-size: 40px;
         }
     }
 
@@ -181,6 +181,7 @@ header {
         max-width: 70vw;
         display: flex;
         justify-content: center;
+        font-size: 20px;
     }
 
     nav {
@@ -199,7 +200,8 @@ header {
     .burger-icon{
         display: block;
     }
-    body{
-        min-width: 558px;
+    .button {
+        width: 200px;
+        height: 60px;
     }
 }
